[Autofill] Fix heuristics to detect cc-number on united.com.

The reason was that one of the cc-number fields has type="password", and we didn't support this type for cc-number fields.

BUG=591166

Review URL: https://codereview.chromium.org/1754793003

Cr-Commit-Position: refs/heads/master@{#379287}

Former-commit-id: d5a83da5b2571eeb25b61f4b4bd6424b0695fb33